# unit-testing-calc-ppl

./: .gitignore  index.html  pyproject.toml  report.html  setup.py
Python-Calc/: computation.py  main.py
calculator/: compute.py  get_input.py  main.py  validate.py
calculator/tests/: test_bagi.py  test_compute.py  test_input.py  test_kali.py  test_kurang.py  test_main.py  test_tambah.py  test_validate.py
