[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "0.1.0"  # updated version
dependencies = ["pytest","pytest-html"]

[project.scripts]
calc = "main:main"

[tool.pytest.ini_options]
addopts = "--html=report.html --self-contained-html"