[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "0.1.0"  # updated version
dependencies = ["pytest","pytest-html"]

[project.scripts]
calc = "main:main"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-s --html=report.html --self-contained-html"